--- a/templates/lab/upload_sequence_zipfile.html
+++ b/templates/lab/upload_sequence_zipfile.html
@@ -2,7 +2,7 @@
 {% block title %}Upload Sequence Zipfile{% endblock %}
 {% block body_block %}
 <div class="hero-unit">
-  <h1>Upload Template Zipfile</h1>
+  <h1>Upload Zipfile</h1>
   <br />
   <div class="container-fluid">
     {% if complete %}
